Array_x_ArrayList done

--- a/tonyClass/src/app/java/array-list/array-list-example/array-list-example.component.html
+++ b/tonyClass/src/app/java/array-list/array-list-example/array-list-example.component.html
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-xs-12">
       <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-        <button type="button" class="btn btn-outline-light" routerLink="/java/array-list">
+        <button type="button" class="btn btn-outline-light" routerLink="/java/arraylist">
           ArrayList in Java
         </button>
       </div>
