--- a/tonyClass/src/app/java/array-list/array-list.component.html
+++ b/tonyClass/src/app/java/array-list/array-list.component.html
@@ -5,7 +5,7 @@
         <a class="nav-link" routerLink="/java/arraylist/arraylist-examples">Arrays List</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/java/array-x-arraylist">Array vs Arrays List</a>
+        <a class="nav-link" routerLink="/java/arraylist/array-x-arraylist">Array vs Arrays List</a>
       </li>
 
 
