--- a/tonyClass/src/app/java/array-list/array-x-array-list/array-x-array-list.component.html
+++ b/tonyClass/src/app/java/array-list/array-x-array-list/array-x-array-list.component.html
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col-xs-12">
       <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-        <button type="button" class="btn btn-outline-light" routerLink="/java/array-list">
+        <button type="button" class="btn btn-outline-light" routerLink="/java/arraylist">
           ArraysList in Java
         </button>
       </div>
@@ -16,19 +16,30 @@
       <h2>Array vs Arrays in Java</h2>
     </div>
 
-    <h3>Array and ArrayList</h3>
+    <h3>Array VS ArrayList</h3>
     <div class="col-xs-12 picture">
       <div class="image">
-        <img src="./../../../../assets/images/BackGround/Array-List.png" alt="">
+        <img src="./../../../../assets/images/BackGround/Array_x_ArrayList3.png" alt="">
+      </div>
+      <div class="image">
+        <img src="./../../../../assets/images/BackGround/Array_x_ArrayList.png" alt="">
+      </div>
+      <div class="image">
+        <img src="./../../../../assets/images/BackGround/Array_x_ArrayList2.png" alt="">
+      </div>
+      <div class="image">
+        <img src="./../../../../assets/images/BackGround/Array_x_ArrayList4.png" alt="">
       </div>
       <h3>Introduction PDF File</h3>
-      <iframe src="./../../../../assets/docs/Arrays/01_Array_Introduction.pdf" width="95%" height="900px"
+      <iframe src="./../../../../assets/docs/Array_x_ArrayList/Array_x_ArrayList.pdf" width="95%" height="900px"
         style="border: none"></iframe>
     </div>
 
     <h3> Java Prints Files</h3>
     <div class="image img-fluid">
-      <img src="./../../../../assets/images/Java/Array/00_Array_Basic_class.png" alt="Arquivo Html" />
+      <img src="./../../../../assets/images/Java/Array_vs_ArrayList/01_Array_x_ArrayList_Main_Class.png" alt="Arquivo Html" />
+      <img src="./../../../../assets/images/Java/Array_vs_ArrayList/02_Array_x_ArrayList.png" alt="Arquivo Html" />
+      <img src="./../../../../assets/images/Java/Array_vs_ArrayList/02B_Array_x_ArrayList.png" alt="Arquivo Html" />
 
     </div>
 
