--- a/tonyClass/src/app/java/array-list/array-list.component.html
+++ b/tonyClass/src/app/java/array-list/array-list.component.html
@@ -10,6 +10,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/java/arraylist/array-x-arraylist-x-linkedList">Array vs Arrays List vs LinkedList</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/java/arraylist/linkedList">LinkedList</a>
+      </li>
 
 
 
