--- a/tonyClass/src/app/_body/body.component.css
+++ b/tonyClass/src/app/_body/body.component.css
@@ -12,10 +12,12 @@ span {
   padding-left: 1%;
 }
 
-
+/* .container-fluid.image {
+  max-height: 80vh;
+} */
 
 .image {
-  width: 100%;
+  width: 100vw;
   min-height: 86vh;
   background-image: url('./../../assets/images/BackGround/java2_17.png') !important;
   background-repeat: no-repeat !important;
