--- a/tonyClass/src/app/_footer/footer.component.css
+++ b/tonyClass/src/app/_footer/footer.component.css
@@ -1,8 +1,9 @@
 .container {
- width: fit-content;
- height: max-content;
+ width: 100vw;
+ max-height: 6vh;
  display: flex;
- align-items: center;
+ justify-content: space-around;
+ 
 
 }
 
