--- a/tonyClass/src/app/app.component.css
+++ b/tonyClass/src/app/app.component.css
@@ -30,7 +30,7 @@ a:hover {
 }
 
 body {
-  width: 100wv;
+  max-width: 100vw;
   min-height: 86vh;
   /* height: max-content; */
   background: linear-gradient(68.15deg, #09031f 14.62%, #e0e2e6 85.61%);
