--- a/tonyClass/src/app/java/array-list/linked-list/linked-list.component.html
+++ b/tonyClass/src/app/java/array-list/linked-list/linked-list.component.html
@@ -18,20 +18,29 @@
       <h3>LinkedList Part01</h3>
       <div class="col-xs-12 picture">
         <div class="image">
-          <img src="./../../../../assets/images/BackGround/Array-List.png" alt="">
+          <img src="./../../../../assets/images/BackGround/LinkedList.png" alt="">
         </div>
         <h3>ArrayLis PDF File</h3>
-        <iframe src="./../../../../assets/docs/ArrayList/ArrayList.pdf" width="95%" height="900px"
+        <iframe src="./../../../../assets/docs/LinkedList/LinkedList.pdf" width="95%" height="900px"
           style="border: none"></iframe>
       </div>
   
-      <h3> Java Prints Files</h3>
+      <h3> Java Prints 1º Part Files</h3>
       <div class="image img-fluid">
-        <img src="./../../../../assets/images/Java/ArrayList/01_ArrayList_MainClass_Part01.png" alt="Arquivo Html" />
+        <img src="./../../../../assets/images/Java/LinkedList/LinkedList_part01/01_LinkedList_part01_MainClass.png" alt="Arquivo Html" />
+        <img src="./../../../../assets/images/Java/LinkedList/LinkedList_part01/02_LinkedList_part01_MainClass_Method_AddMore.png" alt="Arquivo Html" />
+        <img src="./../../../../assets/images/Java/LinkedList/LinkedList_part01/03_LinkedList_part01_MainClass_Method_RemoveElements.png" alt="Arquivo Html" />
+        <img src="./../../../../assets/images/Java/LinkedList/LinkedList_part01/04_Print_part01.png" alt="Arquivo Html" />
+        <img src="./../../../../assets/images/Java/LinkedList/LinkedList_part01/05_Print_part01.png" alt="Arquivo Html" />
+        <img src="./../../../../assets/images/Java/LinkedList/LinkedList_part01/06_Print_part01Queue_Methods_Offer_.png" alt="Arquivo Html" />
+        <img src="./../../../../assets/images/Java/LinkedList/LinkedList_part01/07_Print_part01_Stack_Methods_Push.png" alt="Arquivo Html" />
+        <img src="./../../../../assets/images/Java/LinkedList/LinkedList_part01/08_Print_part01_Stack_Methods_Remove.png" alt="Arquivo Html" />
+        <img src="./../../../../assets/images/Java/LinkedList/LinkedList_part01/08A_Print_part01_Stack_Methods_Remove.png" alt="Arquivo Html" />
+        <img src="./../../../../assets/images/Java/LinkedList/LinkedList_part01/09_Print_part01_Queue_and_Deque_Methods_Poll.png" alt="Arquivo Html" />
      
   
       </div>
-      <h3> Java Prints Files MoreList Class</h3>
+      <h3> Java Prints 2º Part Files</h3>
       <div class="image img-fluid">
         <img src="./../../../../assets/images/Java/ArrayList/01_ArrayList_MoreListsClass_Part02A.png" alt="Arquivo Html" />
       
@@ -48,13 +57,7 @@
       
   
       </div>
-      <h3> Java Prints Console Files Method Part03 </h3>
-      <div class="image img-fluid">
-        <img src="./../../../../assets/images/Java/ArrayList/07_Create_ArryList_From_the_List.png" alt="Arquivo Html" />
-      
-  
-  
-      </div>
+     
   
   
   
