--- a/tonyClass/src/app/java/array-list/array-list.component.html
+++ b/tonyClass/src/app/java/array-list/array-list.component.html
@@ -13,6 +13,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/java/arraylist/linkedList">LinkedList</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/java/arraylist/iteractor">Iteractor</a>
+      </li>
 
 
 
