--- a/tonyClass/src/app/java/ooP-Part01/ooP-Part01.component.html
+++ b/tonyClass/src/app/java/ooP-Part01/ooP-Part01.component.html
@@ -22,6 +22,10 @@
     <li class="nav-item">
       <a class="nav-link" routerLink="/java/organizing-java-classes">Organizing Java Class</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/java/ooP-Part01/enum">Enum</a>
+    </li>
+    
 
 
   </ul>
