Enum_part02 is done

--- a/tonyClass/src/app/java/ooP-Part01/enum/enum.component.html
+++ b/tonyClass/src/app/java/ooP-Part01/enum/enum.component.html
@@ -62,23 +62,55 @@
                 alt="Arquivo Html" />
             <img src="./../../../../assets/images/Java/Enum/Enum_part01/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_35423800 (12).png"
                 alt="Arquivo Html" />
-           
+
 
 
         </div>
         <h3> Java Prints MainClass Part02 Files</h3>
         <div class="image img-fluid">
-            <img src="./../../../../assets/images/Java/AutoBoxing-UnBoxing/Autoboxing-and-Unboxing_Part02/01_AutoBoxing-UnBoxing_MainClass_Part02.png"
+            <img src="./../../../../assets/images/Java/Enum/Enum_part02/01_Enum_Main_Class_Part02.png"
                 alt="Arquivo Html" />
-         
+            <img src="./../../../../assets/images/Java/Enum/Enum_part02/02_Enum_Neum_Topping.png" alt="Arquivo Html" />
+            <img src="./../../../../assets/images/Java/Enum/Enum_part01/01_Enum_Part01_Enum.png" alt="Arquivo Html" />
+
 
 
         </div>
-        <h3> Java Prints Console Files Method </h3>
+        <h3> Java Prints Console Files Part02 </h3>
         <div class="image img-fluid">
-            <img src="./../../../../assets/images/Java/AutoBoxing-UnBoxing/Autoboxing-and-Unboxing_Part02/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_35423800 (9).png"
+            <img src="./../../../../assets/images/Java/Enum/Enum_part02/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_35423800.png"
                 alt="Arquivo Html" />
-    
+            <img src="./../../../../assets/images/Java/Enum/Enum_part02/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_35423800 (1).png"
+                alt="Arquivo Html" />
+            <img src="./../../../../assets/images/Java/Enum/Enum_part02/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_35423800 (2).png"
+                alt="Arquivo Html" />
+            <img src="./../../../../assets/images/Java/Enum/Enum_part02/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_35423800 (3).png"
+                alt="Arquivo Html" />
+            <img src="./../../../../assets/images/Java/Enum/Enum_part02/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_35423800 (4).png"
+                alt="Arquivo Html" />
+            <img src="./../../../../assets/images/Java/Enum/Enum_part02/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_35423800 (5).png"
+                alt="Arquivo Html" />
+            <img src="./../../../../assets/images/Java/Enum/Enum_part02/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_35423800 (6).png"
+                alt="Arquivo Html" />
+            <img src="./../../../../assets/images/Java/Enum/Enum_part02/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_35423800 (7).png"
+                alt="Arquivo Html" />
+            <img src="./../../../../assets/images/Java/Enum/Enum_part02/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_35423800 (8).png"
+                alt="Arquivo Html" />
+            <img src="./../../../../assets/images/Java/Enum/Enum_part02/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_35423800 (9).png"
+                alt="Arquivo Html" />
+            <img src="./../../../../assets/images/Java/Enum/Enum_part02/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_35423800 (10).png"
+                alt="Arquivo Html" />
+            <img src="./../../../../assets/images/Java/Enum/Enum_part02/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_35423800 (11).png"
+                alt="Arquivo Html" />
+            <img src="./../../../../assets/images/Java/Enum/Enum_part02/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_35423800 (12).png"
+                alt="Arquivo Html" />
+            <img src="./../../../../assets/images/Java/Enum/Enum_part02/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_35423800 (13).png"
+                alt="Arquivo Html" />
+            <img src="./../../../../assets/images/Java/Enum/Enum_part02/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_35423800 (14).png"
+                alt="Arquivo Html" />
+            <img src="./../../../../assets/images/Java/Enum/Enum_part02/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_35423800 (15).png"
+                alt="Arquivo Html" />
+          
 
 
         </div>
