--- a/tonyClass/src/app/java/java.component.html
+++ b/tonyClass/src/app/java/java.component.html
@@ -35,6 +35,11 @@
         >ArrayList</a
       >
     </li>
+    <li class="nav-item">
+      <a class="nav-link " aria-current="page" routerLink="modifiers"
+        >Modifiers</a
+      >
+    </li>
 
   </ul>
 
