--- a/tonyClass/src/app/java/modifiers/modifiers.component.html
+++ b/tonyClass/src/app/java/modifiers/modifiers.component.html
@@ -4,6 +4,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/java/modifiers/abstract">Abstract</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/java/modifiers/interface">Interface</a>
+      </li>
 
 
 
