--- a/tonyClass/src/app/java/modifiers/interface/interface.component.html
+++ b/tonyClass/src/app/java/modifiers/interface/interface.component.html
@@ -1,34 +1,86 @@
 <div class="container">
-    <div class="row">
-      <div class="col-xs-12">
-        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-          <button type="button" class="btn btn-outline-light" routerLink="/java/modifiers">
-            Modifiers in Java
-          </button>
-        </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+        <button type="button" class="btn btn-outline-light" routerLink="/java/modifiers">
+          Modifiers in Java
+        </button>
       </div>
-    </div>
-  
-    <div class="row">
-      <div class="col-xs-12">
-        <h2>Interface  in Java</h2>
-      </div>
-  
-      <h3>Abstract</h3>
-      <div class="col-xs-12 picture">
-        <div class="image">
-          <img src="./../../../../assets/images/BackGround/Array2.png" alt="">
-        </div>
-        <h3>Introduction PDF File</h3>
-        <iframe src="./../../../../assets/docs/Arrays/01_Array_Introduction.pdf" width="95%" height="900px"
-          style="border: none"></iframe>
-      </div>
-      <h3>Basic 01 PDF File</h3>
-      <div class="image">
-        <iframe src="./../../../../assets/docs/Arrays/01_Array-Part01.pdf" width="95%" height="900px"
-          style="border: none"></iframe>
-      </div>
-
-  
     </div>
   </div>
+
+  <div class="row">
+    <div class="col-xs-12">
+      <h2>Interface in Java</h2>
+    </div>
+
+    <h3>Abstract</h3>
+    <div class="col-xs-12 picture">
+      <div class="image">
+        <img src="./../../../../assets/images/BackGround/Intefaces01.png" alt="">
+      </div>
+      <div class="image">
+        <img src="./../../../../assets/images/BackGround/Intefaces02.png" alt="">
+      </div>
+      <div class="image">
+        <img src="./../../../../assets/images/BackGround/Intefaces03.png" alt="">
+      </div>
+      <h3>Introduction PDF File Part01</h3>
+      <iframe src="./../../../../assets/docs/Modifiers/interface.pdf" width="95%" height="900px"
+        style="border: none"></iframe>
+    </div>
+    <h3>Interface Print files Part01</h3>
+    <div class="col-xs-12 picture">
+      <div class="image">
+        <img src="./../../../../assets/images/Java/Modifiers/04_Interface/Interface_part01/01_Interface_FlightEnabled.png" alt="">
+      </div>
+      <div class="image">
+        <img src="./../../../../assets/images/Java/Modifiers/04_Interface/Interface_part01/02__ClassBird_Extend_Animal_Implement_FlightEnabled_and_Trackable.png" alt="">
+      </div>
+      <div class="image">
+        <img src="./../../../../assets/images/Java/Modifiers/04_Interface/Interface_part01/03__MainCLass.png" alt="">
+      </div>
+      <div class="image">
+        <img src="./../../../../assets/images/Java/Modifiers/04_Interface/Interface_part01/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36166872.png" alt="">
+        <img src="./../../../../assets/images/Java/Modifiers/04_Interface/Interface_part01/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36166872 (1).png" alt="">
+        <img src="./../../../../assets/images/Java/Modifiers/04_Interface/Interface_part01/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36166872 (2).png" alt="">
+        <img src="./../../../../assets/images/Java/Modifiers/04_Interface/Interface_part01/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36166872 (3).png" alt="">
+        <img src="./../../../../assets/images/Java/Modifiers/04_Interface/Interface_part01/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36166872 (4).png" alt="">
+        <img src="./../../../../assets/images/Java/Modifiers/04_Interface/Interface_part01/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36166872 (5).png" alt="">
+        <img src="./../../../../assets/images/Java/Modifiers/04_Interface/Interface_part01/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36166872 (6).png" alt="">
+        <img src="./../../../../assets/images/Java/Modifiers/04_Interface/Interface_part01/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36166872 (7).png" alt="">
+        <img src="./../../../../assets/images/Java/Modifiers/04_Interface/Interface_part01/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36166872 (8).png" alt="">
+        <img src="./../../../../assets/images/Java/Modifiers/04_Interface/Interface_part01/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36166872 (9).png" alt="">
+        <img src="./../../../../assets/images/Java/Modifiers/04_Interface/Interface_part01/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36166872 (10).png" alt="">
+        <img src="./../../../../assets/images/Java/Modifiers/04_Interface/Interface_part01/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36166872 (11).png" alt="">
+        <img src="./../../../../assets/images/Java/Modifiers/04_Interface/Interface_part01/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36166872 (12).png" alt="">
+        <img src="./../../../../assets/images/Java/Modifiers/04_Interface/Interface_part01/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36166872 (13).png" alt="">
+        <img src="./../../../../assets/images/Java/Modifiers/04_Interface/Interface_part01/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36166872 (14).png" alt="">
+        <img src="./../../../../assets/images/Java/Modifiers/04_Interface/Interface_part01/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36166872 (15).png" alt="">
+        <img src="./../../../../assets/images/Java/Modifiers/04_Interface/Interface_part01/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36166872 (16).png" alt="">
+        <img src="./../../../../assets/images/Java/Modifiers/04_Interface/Interface_part01/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36166872 (17).png" alt="">
+        <img src="./../../../../assets/images/Java/Modifiers/04_Interface/Interface_part01/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36166872 (18).png" alt="">
+        <img src="./../../../../assets/images/Java/Modifiers/04_Interface/Interface_part01/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36166872 (19).png" alt="">
+        <img src="./../../../../assets/images/Java/Modifiers/04_Interface/Interface_part01/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36166872 (20).png" alt="">
+        <img src="./../../../../assets/images/Java/Modifiers/04_Interface/Interface_part01/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36166872 (21).png" alt="">
+        <img src="./../../../../assets/images/Java/Modifiers/04_Interface/Interface_part01/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36166872 (22).png" alt="">
+        <img src="./../../../../assets/images/Java/Modifiers/04_Interface/Interface_part01/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36166872 (23).png" alt="">
+     
+     
+     
+     
+      </div>
+   
+    </div>
+    <h3>Basic 01 PDF File</h3>
+    <div class="image">
+      
+      <iframe src="./../../../../assets/docs/Modifiers/interface.pdf" width="95%" height="900px"
+        style="border: none"></iframe>
+      <iframe src="./../../../../assets/docs/Arrays/01_Array-Part01.pdf" width="95%" height="900px"
+        style="border: none"></iframe>
+    </div>
+
+
+  </div>
+</div>
