--- a/tonyClass/src/app/java/java.component.html
+++ b/tonyClass/src/app/java/java.component.html
@@ -40,6 +40,11 @@
         >Modifiers</a
       >
     </li>
+    <li class="nav-item">
+      <a class="nav-link " aria-current="page" routerLink="generics"
+        >Generics</a
+      >
+    </li>
 
   </ul>
 
